--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "vuepress": "2.0.0-rc.9",
     "vuepress-plugin-search-pro": "2.0.0-rc.37",
     "vuepress-theme-hope": "2.0.0-rc.37"
+  },
+  "dependencies": {
+    "@vueuse/core": "^10.9.0"
   }
 }
